syntax = "proto3";

package auth.v1;

option go_package = "github.com/lukabrx/uber-clone/api/proto/auth/v1";

service AuthService {
  rpc AuthenticateWithGoogle(AuthenticateWithGoogleRequest) returns (AuthenticateWithGoogleResponse);
  rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse); 
}

message User {
  string id = 1;
  string email = 2;
  string name = 3;
}

message AuthenticateWithGoogleRequest {
  string code = 1;
}

message AuthenticateWithGoogleResponse {
  string access_token = 1;
  string refresh_token = 2;
  User user = 3;
}

message VerifyTokenRequest {
  string token = 1;
}

message VerifyTokenResponse {
  string user_id = 1;
}

message RefreshTokenRequest {
    string refresh_token = 1;
}

message RefreshTokenResponse {
    string access_token = 1;
    string refresh_token = 2;
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  User user = 1;
}
